--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A 2D physics-based game written in TypeScript",
   "main": "index.js",
   "scripts": {
+    "predev": "npm run build",
+    "dev": "parcel index.html",
     "lint": "eslint --fix './src/**/*.ts'",
     "format": "prettier --write 'src/**/*.ts'",
     "prebuild": "npm run lint && npm run format",
@@ -18,6 +20,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
     "typescript": "^3.8.3"
   }
